﻿drkns 03.06.2014 09:15:51 +0200 - build 3936

1. Пара багов в 3934.

drkns 03.06.2014 03:21:08 +0200 - build 3935

1. GCC.

drkns 03.06.2014 02:42:03 +0200 - build 3934

1. Рандомный рефакторинг.

2. Far обрабатывает команду 'ver', отображая свою версию, версии используемых библиотек и установленных плагинов.

drkns 03.06.2014 02:16:43 +0200 - build 3933

1. 0002687: Меню кодировок: пропадает сепаратор --Other--

shmuel 02.06.2014 18:15:07 +0200 - build 3932

1. Рефакторинг.

shmuel 02.06.2014 00:17:53 +0200 - build 3931

1. Рефакторинг.

shmuel 31.05.2014 17:30:49 +0200 - build 3930

1. Рефакторинг.

shmuel 30.05.2014 23:19:36 +0200 - build 3929

1. Уточнение 3925.

shmuel 30.05.2014 21:32:26 +0200 - build 3928

1. Уточнение 3925 (была утечка памяти).

shmuel 29.05.2014 13:38:28 +0200 - build 3927

1. Уточнение 3825 (DI_FIXEDIT).

shmuel 28.05.2014 16:10:23 +0200 - build 3926

1. Уточнение 3925.

shmuel 28.05.2014 13:00:02 +0200 - build 3925

1. Экспериментально: M#2674: Возврат хэндла панели при работе из макроса.

shmuel 26.05.2014 20:22:56 +0200 - build 3924

1. Завершение рефакторинга, начатого в 3896.

shmuel 26.05.2014 18:44:24 +0200 - build 3923

1. Продолжение 3896.

shmuel 25.05.2014 21:13:55 +0200 - build 3922

1. Продолжение 3896.

shmuel 25.05.2014 18:15:52 +0200 - build 3921

1. Продолжение 3896.

w17 25.05.2014 10:20:35 +0400 - build 3920

1. Ещё уточнение 3913
   Добавлен флаг MLF_HOLDTARGET в plugin.h

shmuel 24.05.2014 20:04:56 +0200 - build 3919

1. Починим вложенные макросы.

shmuel 24.05.2014 17:25:47 +0200 - build 3918

1. Продолжение 3896.

w17 24.05.2014 14:16:12 +0400 - build 3917

1. Уточнение 3913

drkns 24.05.2014 12:11:56 +0200 - build 3916

1. "Починим" пока симлинки как было.

drkns 24.05.2014 10:03:45 +0200 - build 3915

1. 0002686: Debug build crashes in editor

shmuel 23.05.2014 19:52:03 +0200 - build 3914

1. Продолжение 3896.

w17 23.05.2014 15:50:39 +0400 - build 3913
