@@ -1,4 +1,8 @@
-﻿drkns 03.06.2014 09:15:51 +0200 - build 3936
+﻿drkns 03.06.2014 17:35:54 +0200 - build 3937
+
+1. Ещё пара багов в 3934.
+
+drkns 03.06.2014 09:15:51 +0200 - build 3936
 
 1. Пара багов в 3934.
 
